Closed Bug 1609589 Opened 6 years ago Closed 6 years ago

New <input type="number"> implementation does not report changes with JAWS screen reader

Categories

(Core :: Disability Access APIs, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla74
Tracking Status
firefox74 --- fixed

People

(Reporter: Jamie, Assigned: Jamie)

References

(Blocks 1 open bug, Regression)

Details

(Keywords: regression)

Attachments

(1 file)

The new <input type="number"> implementation in bug 981248 (and subsequent a11y fixes in bug 1609394) works well with NVDA. Unfortunately, it does not work with JAWS. As far as I can tell, we're now exposing things exactly the same way Chrome does, but even though JAWS works with the Chrome implementation, it doesn't work with ours. Either JAWS is special casing Chrome/Firefox (unfortunately very possible) or we're missing something I haven't figured out yet.

STR:

  1. Start JAWS, then Firefox.
  2. Open this URL:
    data:text/html,<input type="number" value="1">
  3. Press control+home to move to the top of the document, then enter to activate forms mode on the input.
  4. Press up arrow.
    • Expected: JAWS should say "2"
    • Actual: JAWS says nothing.
  5. Press JAWSKey+tab.
    • Expected: JAWS should say: "edit spin box, 2"
    • Actual: JAWS says: "edit spin box, 1"
  6. Press left arrow.
    • Observe: JAWS says "2", so the field definitely updated, even though it isn't reflected by up arrow and JAWSKey+tab.

We're not firing a valueChange event as we should be. Taking.

Assignee: nobody → jteh

After bug 981248, <input type="number"> no longer has an anonymous text input.
Instead, the <input type="number"> itself manages the text.
Previously, the a11y code which fired value change events for text changes only did this for combo boxes and role ENTRY.
This meant a value change event was no longer fired for <input type="number">.
This condition has now been extended to include role SPINBUTTON.
This fixes reporting of <input type="number"> changes for JAWS.

Pushed by jteh@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/198f7c0bb5bb Fire a value change event when the text of a spin button changes. r=MarcoZ
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla74
Has Regression Range: --- → yes
Keywords: regression
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: